--- a/styles.scss
+++ b/styles.scss
@@ -308,7 +308,7 @@ a, a:visited{
 
 .project-item{
     width: auto;
-    max-width: 25em;
+    max-width: 25%;
     transition: 0.1s;
     color: $pc5;
 
@@ -339,8 +339,8 @@ a, a:visited{
   }
 
 .project-image-container{
-    width: 25em;
-    height: calc(25em/16*9);
+    width: 20vw;
+    height: calc(20vw/16*9);
     background-repeat: no-repeat;
 
     color: $pc5;
@@ -356,6 +356,7 @@ a, a:visited{
 
 .project-item h2{
     text-align: center;
+    font-size: 125%;
 }
 
 .project-item:nth-of-type(1) .project-image-container{
@@ -399,4 +400,40 @@ a, a:visited{
 
 footer p{
     font-size: 2em;
+}
+
+// Responsive
+@media screen and (max-width: 1000px) {
+    .more-me-container{
+        display: block;
+    }
+
+    .more-me-item{
+        margin-bottom: 2.5em;
+    }
+}
+
+
+@media screen and (max-width: 950px) {
+    #project-container{
+        display: block;
+    }
+
+    .project-item{
+        max-width: 100%;
+        margin-bottom: 5em;
+    }
+    
+    .project-image-container{
+        width: 50vw;
+        height: calc(50vw/16*9);
+    }
+
+    #footer-container{
+        display: block;
+    }
+
+    #footer-container p{
+        margin-bottom: 5em;
+    }
 }
