--- a/styles.scss
+++ b/styles.scss
@@ -23,6 +23,10 @@ $pc5: #F9F9F9;
     src: url(/content/font/Louis\ George\ Cafe\ Light.ttf);
 }
 
+.mobile{
+    display: none;
+}
+
 html, body, main, section {
     margin: 0;
 }
@@ -136,29 +140,29 @@ a, a:visited{
     }
 }
 
-#intro-container{
+.intro-container{
     position: absolute;
     top: 35%;
 
     width: 100%;
 }
 
-#intro-container h1{
+.intro-container h1{
     margin: 0;
     text-align: center;
 }
 
-#intro-container h1:nth-of-type(odd){
+.intro-container h1:nth-of-type(odd){
     line-height: 100%;
-    font-size: 8em;
+    font-size: 5.75vw;
 }
 
-#intro-container h1:nth-of-type(even){
-    font-size: 3.5em;
+.intro-container h1:nth-of-type(even){
+    font-size: 2.4vw;
 }
 
-#intro-container hr{
-    width: 55em;
+.intro-container hr{
+    width: 38vw;
     border: 0.15em $pc5 solid;
     margin: auto;
     display: block;
@@ -216,7 +220,9 @@ a, a:visited{
 }
 
 #portrait{
-    width: 100%;
+    width: 30vw;
+    margin: auto;
+    display: block;
 }
 
 #me-container{
@@ -226,8 +232,7 @@ a, a:visited{
 }
 
 #me-container > div:nth-of-type(even){
-    flex: 2;
-
+    flex: 2;;
 }
 
 #me-container > div:nth-of-type(odd){
@@ -235,7 +240,7 @@ a, a:visited{
     padding-right: 5em;
     padding-right: 5em;
 
-    font-size: 1em;
+    font-size: 1vw;
 }
 
 // more me
@@ -404,6 +409,30 @@ footer p{
 
 // Responsive
 @media screen and (max-width: 1000px) {
+    .mobile{
+        display: block;
+    }
+
+    .desktop{
+        display: none;
+    }
+
+    .intro-container{
+        top: 25%;
+    }
+
+    .intro-container h1{
+        font-size: 25vw !important;
+    }
+
+    #me{
+        padding-top: 5em;
+    }
+
+    #me-container{
+        display: block;
+    }
+
     .more-me-container{
         display: block;
     }
@@ -411,10 +440,20 @@ footer p{
     .more-me-item{
         margin-bottom: 2.5em;
     }
-}
 
+    .show{
+        animation: none;
+    }
+    
+    .reveal{
+        opacity: 1;
+        transition: 0s;
+    }
 
-@media screen and (max-width: 950px) {
+    #intro-name-title{
+        opacity: 1;
+    }
+    
     #project-container{
         display: block;
     }
