--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,7 @@ a, a:visited {
 }
 
 #intro {
-  height: 99vh;
-  background-color: red !important;
+  height: calc(100vh - 5em);
 }
 
 #intro-name-cursor {
