--- a/styles.scss
+++ b/styles.scss
@@ -96,8 +96,42 @@ a, a:visited{
     fill: $pc5;
 }
 
+//Loader
+
+#loader{
+    background-color: rgba($color: #000, $alpha: 1.0);
+
+    position: fixed;
+    margin-left: auto;
+    margin-right: auto;
+
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    text-align: center;
+    z-index: 99;
+}
+
+#loader-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    width: 100vw;
+    height: 100vh;
+
+}
+
+.loader-item{
+    flex: 1;
+}
+
+//Intro
+
 #intro{
-    height: calc(100vh - 1em);
+    height: calc(100vh - 2em);
 }
 
 #intro-name-cursor{
@@ -186,7 +220,7 @@ a, a:visited{
 
     animation: arrow-down 2s infinite;
 
-    z-index: 99;
+    z-index: 98;
 }
 
 @keyframes arrow-down{
