--- a/styles.scss
+++ b/styles.scss
@@ -99,6 +99,8 @@ a, a:visited{
 //Loader
 
 #loader{
+    color: white;
+
     background-color: rgba($color: #000, $alpha: 1.0);
 
     position: fixed;
