--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,18 @@ a, a:visited {
   color: #505050;
 }
 
+.hide-loader {
+  animation: hide-loader 1s ease forwards;
+}
+
+@keyframes hide-loader {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 #intro {
   height: calc(100vh - 2em);
 }
