--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,12 @@ a, a:visited {
   0% {
     opacity: 1;
   }
+  99% {
+    opacity: 0;
+    height: auto;
+  }
   100% {
+    height: 0;
     opacity: 0;
   }
 }
@@ -293,6 +298,14 @@ a, a:visited {
 #projects h1 {
   text-align: center;
   font-size: 6.25em;
+}
+
+#projects * {
+  text-decoration: none !important;
+}
+
+#projects p {
+  margin-top: 0.5em;
 }
 
 #projects hr {
