--- a/styles.scss
+++ b/styles.scss
@@ -143,7 +143,13 @@ a, a:visited{
         opacity: 1;
     }
 
+    99%{
+        opacity: 0;
+        height: auto;
+    }
+
     100%{
+        height: 0;
         opacity: 0;
     }
 }
@@ -344,6 +350,14 @@ a, a:visited{
 #projects h1{
     text-align: center;
     font-size: 6.25em;
+}
+
+#projects *{
+    text-decoration: none !important;
+}
+
+#projects p{
+    margin-top: 0.5em;
 }
 
 #projects hr{
