--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,37 @@ a, a:visited {
     opacity: 0;
   }
 }
+#loader-dots {
+  position: absolute;
+}
+
+#loader button {
+  border: 0.1em solid #F9F9F9;
+  border-radius: 0.1em;
+  background-color: transparent;
+  color: #F9F9F9;
+  transition: 0.1s;
+  padding: 0.25em;
+}
+
+#loader button:hover {
+  cursor: pointer;
+  background-color: #202020;
+  transform: scale(1.05);
+}
+
+#loader svg {
+  width: 5em;
+  margin: auto;
+  display: block;
+}
+
+#loader-skip {
+  position: absolute;
+  width: 100%;
+  bottom: 2.5em;
+}
+
 #intro {
   height: calc(100vh - 2em);
 }
